# RayMarching

./: CMakeLists.txt  Camera_8h_source.html  Doxyfile  LICENSE  algebra_8h_source.html  annotated.html  classRayMarching_1_1Camera-members.html  classRayMarching_1_1Camera.html  classRayMarching_1_1ControlNum-members.html  classRayMarching_1_1ControlNum.html  classRayMarching_1_1Cube-members.html  classRayMarching_1_1Cube.html  classRayMarching_1_1Cylinder-members.html  classRayMarching_1_1Cylinder.html  classRayMarching_1_1Line-members.html  classRayMarching_1_1Line.html  classRayMarching_1_1SDFCombination-members.html  classRayMarching_1_1SDFCombination.html  classRayMarching_1_1SDFObject-members.html  classRayMarching_1_1SDFObject.html  classRayMarching_1_1Scene-members.html  classRayMarching_1_1Scene.html  classRayMarching_1_1Shape-members.html  classRayMarching_1_1Shape.html  classRayMarching_1_1Sphere-members.html  classRayMarching_1_1Sphere.html  classRayMarching_1_1SyncQueue-members.html  classRayMarching_1_1SyncQueue.html  classRayMarching_1_1TransformataObject-members.html  classRayMarching_1_1TransformataObject.html  classes.html  colors_8h_source.html  const_8h_source.html  controlnum_8h_source.html  dir_1563a38af0d3a5e4a6330d6d45e9792a.html  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bdeba5f06b852fec80257c0bf4c3c36e.html  files.html  functions.html  (+23 more)
.github/workflows/: docs.yml
data/: example_scene.json
docs/: Camera_8h_source.html  algebra_8h_source.html  annotated.html  classRayMarching_1_1Camera-members.html  classRayMarching_1_1Camera.html  classRayMarching_1_1ControlNum-members.html  classRayMarching_1_1ControlNum.html  classRayMarching_1_1Cube-members.html  classRayMarching_1_1Cube.html  classRayMarching_1_1Line-members.html  classRayMarching_1_1Line.html  classRayMarching_1_1SDFObject-members.html  classRayMarching_1_1SDFObject.html  classRayMarching_1_1Scene-members.html  classRayMarching_1_1Scene.html  classRayMarching_1_1Shape-members.html  classRayMarching_1_1Shape.html  classRayMarching_1_1Sphere-members.html  classRayMarching_1_1Sphere.html  classRayMarching_1_1SyncQueue-members.html  classRayMarching_1_1SyncQueue.html  classes.html  colors_8h_source.html  const_8h_source.html  controlnum_8h_source.html  dir_1563a38af0d3a5e4a6330d6d45e9792a.html  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bdeba5f06b852fec80257c0bf4c3c36e.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  group__RayMarching.html  hierarchy.html  index.html  menudata.js  models3_8h_source.html  modules.html  (+11 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  groups_0.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  (+5 more)
example/: CMakeLists.txt
example/inc/: example_src.h
example/src/: example_src.cpp
example/tests/: example_test.cpp
models/2d/: CMakeLists.txt
models/2d/inc/: models2.h
models/2d/src/: models2..cpp
models/2d/tests/: models2_test.cpp
models/3d/: CMakeLists.txt
models/3d/src/: models3.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+19 more)
src/main/: const.h  main.cpp
src/models/: Camera.cpp  Camera.h  Line.cpp  Line.h  algebra.h  algrebra.cpp  colors.h  models3.cpp  models3.h  scene.cpp  scene.h
src/tools/: const.h  controlnum.cpp  controlnum.h  settings.h  syncqueue.h
tests/models/: CMakeLists.txt  camera_test.cpp  models3_test.cpp  scene_test.cpp
